syntax = "proto3";

package api.inventoryforecast.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/goapi/inventoryforecast/v1;inventoryforecastv1";

// 库存预测服务，提供销量预测、库存预警及智能补货建议。
service InventoryForecastService {
  // 针对指定 SKU 生成未来一段时间的销售预测。
  rpc GenerateForecast(GenerateForecastRequest) returns (GenerateForecastResponse);

  // 获取已生成的销量预测报表。
  rpc GetForecast(GetForecastRequest) returns (GetForecastResponse);

  // 查询当前的库存不足或积压预警。
  rpc ListWarnings(ListWarningsRequest) returns (ListWarningsResponse);

  // 识别并列出库龄较长、周转缓慢的滞销品。
  rpc ListSlowMovingItems(ListSlowMovingItemsRequest) returns (ListSlowMovingItemsResponse);

  // 获取基于预测数据的自动补货清单。
  rpc ListReplenishmentSuggestions(ListReplenishmentSuggestionsRequest) returns (ListReplenishmentSuggestionsResponse);

  // 获取高风险缺货商品的实时预警。
  rpc ListStockoutRisks(ListStockoutRisksRequest) returns (ListStockoutRisksResponse);
}

// 单日预测详情。
message DailyForecast {
  // 预测日期。
  google.protobuf.Timestamp date = 1;
  // 预估件数。
  int32 quantity = 2;
  // 置信度权重 (0-1.0)。
  double confidence = 3;
}

// 销售预测档案。
message SalesForecast {
  // 唯一 ID。
  uint64 id = 1;
  // 目标 SKU。
  uint64 sku_id = 2;
  // 历史日均销。
  int32 average_daily_sales = 3;
  // 增长/下降趋势率。
  double trend_rate = 4;
  // 每日预测序列。
  repeated DailyForecast predictions = 5;
  // 生成时间。
  google.protobuf.Timestamp created_at = 6;
  // 修改时间。
  google.protobuf.Timestamp updated_at = 7;
}

// 生成请求。
message GenerateForecastRequest {
  // SKU ID。
  uint64 sku_id = 1;
}

// 生成响应。
message GenerateForecastResponse {
  // 预测实体。
  SalesForecast forecast = 1;
}

// 查询请求。
message GetForecastRequest {
  // SKU ID。
  uint64 sku_id = 1;
}

// 查询响应。
message GetForecastResponse {
  // 预测实体。
  SalesForecast forecast = 1;
}

// 库存预警详情。
message InventoryWarning {
  // 预警 ID。
  uint64 id = 1;
  // 目标 SKU。
  uint64 sku_id = 2;
  // 当前结余。
  int32 current_stock = 3;
  // 安全水位线。
  int32 warning_threshold = 4;
  // 预计售罄天数。
  int32 days_until_empty = 5;
  // 预计缺货日期。
  google.protobuf.Timestamp estimated_empty_date = 6;
  // 补货推荐标记。
  bool need_replenishment = 7;
  // 建议补货量。
  int32 recommended_replenishment_qty = 8;
  // 录入时刻。
  google.protobuf.Timestamp created_at = 9;
}

// 预警查询。
message ListWarningsRequest {
  // 数量。
  uint32 page_size = 1;
  // 页码。
  uint32 page_num = 2;
}

// 预警响应。
message ListWarningsResponse {
  // 预警记录。
  repeated InventoryWarning warnings = 1;
  // 总数。
  uint64 total_count = 2;
}

// 滞销品详情。
message SlowMovingItem {
  // 记录 ID。
  uint64 id = 1;
  // 商品 SKU。
  uint64 sku_id = 2;
  // 名称快照。
  string product_name = 3;
  // 实物库存。
  int32 current_stock = 4;
  // 实际日销率。
  double daily_sales_rate = 5;
  // 库存天数。
  int32 days_in_stock = 6;
  // 周转速率。
  double turnover_rate = 7;
  // 建议清理方案。
  string recommend_action = 8;
  // 判定时间。
  google.protobuf.Timestamp created_at = 9;
}

// 滞销查询。
message ListSlowMovingItemsRequest {
  // 数量。
  uint32 page_size = 1;
  // 页码。
  uint32 page_num = 2;
}

// 滞销响应。
message ListSlowMovingItemsResponse {
  // 滞销列表。
  repeated SlowMovingItem items = 1;
  // 总数。
  uint64 total_count = 2;
}

// 补货方案。
message ReplenishmentSuggestion {
  // 建议 ID。
  uint64 id = 1;
  // 商品 SKU。
  uint64 sku_id = 2;
  // 名称。
  string product_name = 3;
  // 余量。
  int32 current_stock = 4;
  // 补货建议量。
  int32 suggested_qty = 5;
  // 紧迫度 (HIGH, LOW)。
  string priority = 6;
  // 计算依据说明。
  string reason = 7;
  // 预估补货金额。
  int64 estimated_cost = 8;
  // 生成日期。
  google.protobuf.Timestamp created_at = 9;
}

// 补货查询。
message ListReplenishmentSuggestionsRequest {
  // 优先级筛选。
  string priority = 1;
  // 数量。
  uint32 page_size = 2;
  // 页码。
  uint32 page_num = 3;
}

// 补货响应。
message ListReplenishmentSuggestionsResponse {
  // 建议序列。
  repeated ReplenishmentSuggestion suggestions = 1;
  // 总数。
  uint64 total_count = 2;
}

// 缺货风险详情。
message StockoutRisk {
  // 记录 ID。
  uint64 id = 1;
  // 商品 SKU。
  uint64 sku_id = 2;
  // 结余库存。
  int32 current_stock = 3;
  // 倒计时天数。
  int32 days_until_stockout = 4;
  // 预估售罄点。
  google.protobuf.Timestamp estimated_stockout_date = 5;
  // 风险量级 (CRITICAL)。
  string risk_level = 6;
  // 识别时间。
  google.protobuf.Timestamp created_at = 7;
}

// 风险查询。
message ListStockoutRisksRequest {
  // 风险级。
  string level = 1;
  // 数量。
  uint32 page_size = 2;
  // 页码。
  uint32 page_num = 3;
}

// 风险响应。
message ListStockoutRisksResponse {
  // 风险列表。
  repeated StockoutRisk risks = 1;
  // 总记录数。
  uint64 total_count = 2;
}
